# cv-lessons

./: CMakeLists.txt
Manuals/: Lab2.docx  Lab4.docx
Reports/: report1.docx  report2.docx  report3.docx  report6.docx
gl-report/: main.cpp
gl-report/shaders/: vertex.glsl
lab1/: app.h  lab1_2_main.cpp  lab1_main.cpp  main.cpp  sprite.h
lab1_2/: lab1_2_main.cpp
lab2/: lab2_main.cpp
lab3/: lab3_1.cpp  lab3_2.cpp  lab3_3.cpp  lab3_4.cpp  lab3_main.cpp
lab4/: lab4_main.cpp
lab5/: calibration.xml  detector_params.yaml  glrenderer.h  lab5_main.cpp  shader.h  texture_render.h  window.h
lab5/shaders/: cube_fragment.glsl  cube_vertex.glsl  fragment.glsl  vertex.glsl
lab6/: lab6_main.cpp
lab6/videos/: 0.avi
экзамен/: ОреховАМ_Билет.docx
